[package]
name = "log-enrich"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "mit"

[dependencies]
futures = "~0.1"
serde = "*"
serde_derive = "*"
serde_json = "*"
log = { version = "*", path = "../log" }
take_mut = "*"

[dev-dependencies]
futures-await = "~0.1"
futures-cpupool = "~0.1"
env_logger = { version = "*", path = "../env_logger" }
